<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_marginLeft="@dimen/status_action_margin_left"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

  <LinearLayout android:layout_width="match_parent"
                android:layout_height="wrap_content" android:orientation="horizontal">
    <TextView android:id="@+id/tv_like" android:drawablePadding="@dimen/status_action_drawable_padding" android:layout_width="wrap_content"
              android:textSize="@dimen/status_action_font_size"
              android:padding="@dimen/status_action_padding" android:layout_height="wrap_content" android:text="@string/status_like" android:drawableLeft="@drawable/thumb_up"/>
    <TextView android:id="@+id/tv_comment" android:textSize="@dimen/status_action_font_size" android:drawablePadding="@dimen/status_action_drawable_padding"  android:layout_width="wrap_content" android:padding="@dimen/status_action_padding" android:layout_height="wrap_content" android:text="@string/status_comment" android:drawableLeft="@drawable/comment"/>
    <TextView android:id="@+id/tv_retweet" android:textSize="@dimen/status_action_font_size" android:drawablePadding="@dimen/status_action_drawable_padding"  android:layout_width="wrap_content" android:padding="@dimen/status_action_padding" android:layout_height="wrap_content" android:text="@string/status_retweet" android:drawableLeft="@drawable/retweet"/>
    <TextView android:id="@+id/tv_favorites" android:textSize="@dimen/status_action_font_size" android:drawablePadding="@dimen/status_action_drawable_padding"  android:layout_width="wrap_content" android:padding="@dimen/status_action_padding" android:layout_height="wrap_content" android:text="@string/status_favorites" android:drawableLeft="@drawable/favorites"/>
  </LinearLayout>
  <TextView android:id="@+id/tv_like_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/status_action_padding"
            android:layout_marginLeft="@dimen/status_action_margin_left" />
</LinearLayout>