<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent" xmlns:custom="http://schemas.android.com/apk/res-auto"
                android:background="#efefef">

    <RelativeLayout
        android:id="@+id/actionArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="4dp">

        <Button
            android:id="@+id/crop_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/photo_reset"/>

        <Button
            android:id="@+id/crop_rotate"
            android:layout_toRightOf="@+id/crop_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photo_rotate"/>

        <Button
            android:id="@+id/crop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/crop_rotate"
            android:text="@string/photo_crop"/>

        <Button
            android:id="@+id/crop_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@android:string/ok"/>
    </RelativeLayout>

    <com.theartofdev.edmodo.cropper.CropImageView
        android:id="@+id/cropImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/actionArea"
        android:layout_centerInParent="true" />

    <!--custom:cropMinCropResultWidthPX="100"-->
    <!--custom:cropMinCropResultHeightPX="100"-->
    <!--custom:cropMaxCropResultWidthPX="1024"-->
    <!--custom:cropMaxCropResultHeightPX="1024"-->

    <ProgressBar
        android:id="@+id/pb"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />
</RelativeLayout>